--- a/src/app.html
+++ b/src/app.html
@@ -15,5 +15,9 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<!-- <div style="position:fixed; bottom: 0; justify-content: center;">
+			&COPY;NULL.SKIN
+			<span id="currentYear"></span> -->
+		</div>
 	</body>
 </html>
